--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Read node.js file and eval it",
   "license": "MIT",
-  "repository": "node-eval/file-eval",
+  "repository": "node-eval/node-file-eval",
   "author": "Andrew Abramov <mail@blond.im> (github.com/blond)",
   "keywords": [
     "file",
